[gd_scene load_steps=2 format=3 uid="uid://b4kn6x7i8pqvw"]

[ext_resource type="Script" path="res://scenes/ui/MapOverlay.gd" id="1"]

[node name="MapOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Choose Your Path"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PathAButton" type="Button" parent="Panel/VBoxContainer/ChoiceContainer"]
layout_mode = 2
text = "Path A: Shop"

[node name="PathBButton" type="Button" parent="Panel/VBoxContainer/ChoiceContainer"]
layout_mode = 2
text = "Path B: Upgrade"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close Map"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart Run"
visible = false

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
visible = false